@@ -318,6 +318,12 @@ this program.  If not, see <http://www.gnu.org/licenses/>.  */
 /* Define if you have the kstat library (-lkstat).  */
 /* #undef HAVE_LIBKSTAT */
 
+/* Define to 1 if you have the `isatty' function. */
+/* #undef HAVE_ISATTY */
+
+/* Define to 1 if you have the `ttyname' function. */
+/* #undef HAVE_TTYNAME */
+
 /* Define if you have the sun library (-lsun).  */
 /* #undef HAVE_LIBSUN */
 
